# ChangeLog for media-sound/crip
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  26 Dec 2006; Tiziano Müller <dev-zero@gentoo.org> +crip-3.8.ebuild,
  +metadata.xml:
  New ebuild for bug #158863
