@@ -1,3 +1,0 @@
-MD5 c3a20cf6e34522ba901f152ed53d891a gcstar-1.2.2.tar.gz 2037121
-RMD160 fb7cde04bda23f75cd0bec2b3d331b54c75c0ff4 gcstar-1.2.2.tar.gz 2037121
-SHA256 eeab4b735e011a41786180c77baa7f4b668313f1791b8f76f9fdb8dbbb5b0d03 gcstar-1.2.2.tar.gz 2037121
