@@ -1,3 +1,0 @@
-MD5 0843cfbb9a58f795adf51124928992e1 shm-1.1.1.tar.gz 30720
-RMD160 0bb41511b5cdd04031b09893841e935217af27ef shm-1.1.1.tar.gz 30720
-SHA256 1ec9509660a3936b20bc911ba143034fb3015a00953d9a9ccfe1106b19e6d699 shm-1.1.1.tar.gz 30720
