@@ -1,3 +1,0 @@
-MD5 e7e13cab5727f854629c4c47552a277b dig-demo.rar 22569676
-RMD160 8089b4c5c5c623520640447551436aeffbaa0ae3 dig-demo.rar 22569676
-SHA256 4a377ab213dd70d5e0da293561b8bd4efd88ad4d4ed0379cefdbc58f885c7761 dig-demo.rar 22569676
