@@ -1,3 +1,0 @@
-MD5 db732a69c478532457b5dda54fde89cd ft-demo.zip 99178788
-RMD160 517c24f591db3ab28eb171f1f2669527f2178368 ft-demo.zip 99178788
-SHA256 4591bcbb62201b6bf62f1abc3fd5d9d9411ec31e4706c7f9e129133544e8a16d ft-demo.zip 99178788
