@@ -1,3 +1,0 @@
-MD5 ef606a62ed24c3377148cb4a2e060db0 indy4-demo.rar 665690
-RMD160 31ea7c2a82beda1772a4314bb27e1f97f0cda880 indy4-demo.rar 665690
-SHA256 b0a3c36fc27381257264c6ab1c93173f755953416b81a66d347dcf5d84649383 indy4-demo.rar 665690
