@@ -1,3 +1,0 @@
-MD5 a8b29ff079d0a0f88629b8540f33731a mi3-demo.rar 61172404
-RMD160 08ebc10ffe83cf30937eb0c3012e1f914cb09db2 mi3-demo.rar 61172404
-SHA256 80283d3e8a89c315b05c89d1bbe6e0a3af5182d3001bc36e5317ac631842c51e mi3-demo.rar 61172404
