@@ -1,3 +1,0 @@
-MD5 81940f6ddb94fc0468df57be86fa004b samnmax-demo.rar 986468
-RMD160 fb5399614b8bf01e6a992478a3d64527f4b3a2ee samnmax-demo.rar 986468
-SHA256 9b2a34f6f548e4c247d97ababf54898cbca6e01e5b16e469e423fe5cd27e7aa8 samnmax-demo.rar 986468
