@@ -1,4 +1,5 @@
 AUX glfw-2.6-dyn.patch 1867 RMD160 4500a23bd42c410d82035819981bfa5015895396 SHA1 b87c2ba12e7dfded2c09fafe4fce4877d3542c2a SHA256 dd998ef7027b519cd95707dd49069c868f57551aca2776f8825a2e5e96ecb5a6
 DIST glfw-2.6.tar.bz2 886843 RMD160 71c767e16167e8460fbfb01391614b2501247c7e SHA1 7b11e5a9d923c9826d4cc6eeeb441dc6940109c8 SHA256 1b86ca8c5678fbf6999a0bfbe50de121f8aec9c07bf2383306819caebe3edfca
-EBUILD glfw-2.6.ebuild 1644 RMD160 0411feae344b2b706950f08c5028ed0105736db4 SHA1 7717a208c3c21bb53f2c1e43ef47a5696afc401e SHA256 65b98c800fe4ea5435c16e327f0bc125bd0703acf04cc3c022fc1802db8740d8
+EBUILD glfw-2.6.ebuild 1641 RMD160 e202c0b32cedfd2351618dab93241f4e8eee4559 SHA1 135903ff10ea31724bb2a42181f83454568a86cf SHA256 f866d8a442a3f78db3050040eb3827db3f97c869dee97c1466cafe191f8d4255
 MISC ChangeLog 213 RMD160 bb97092b018a529da88a9be99d26bf3825e6d796 SHA1 cb7a1aa5b897b0c7e4a0d11e3903147595c6a330 SHA256 fe6d577947e687003bd9103bf0051da7ac112600aaebe6e683bd381cea2f260e
+MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
