@@ -1,3 +1,0 @@
-MD5 0d9b93e6194c3805be9e1c855a985a24 glfw-2.6.tar.bz2 886843
-RMD160 71c767e16167e8460fbfb01391614b2501247c7e glfw-2.6.tar.bz2 886843
-SHA256 1b86ca8c5678fbf6999a0bfbe50de121f8aec9c07bf2383306819caebe3edfca glfw-2.6.tar.bz2 886843
