@@ -1,4 +1,4 @@
-DIST crip-3.8.tar.gz 37223 RMD160 da75ea969f3fc2b50815001d08cc3eadb2aa61ae SHA1 e2c8fcc13f11f6c5efa8db9b89fabab73ead63bf SHA256 001544dfe1ae62caa0c8926c815b1529f0ef827a80b1f9322978f0c11a3865c9
-EBUILD crip-3.8.ebuild 828 RMD160 300cad134296ea807ea451a24bd70f133130a96d SHA1 4b310d92470b430bfb9a4f03e1b3ce415c67f0f5 SHA256 a6c6fd9136473c15610fff8ffa65ac668d96ab9195f130239f3234a63837acbe
-MISC ChangeLog 235 RMD160 75b0b2c20f3865d74efa71295e75c79078526c5f SHA1 b8aadd5ced1d98555b0f369970bf62d30a7541b6 SHA256 a6cb9157a9743b0773c233f8427e9da2bf8279e275dac87ba16d39c9ac60b533
+DIST crip-3.9.tar.gz 39594 RMD160 38e4528db249999ab9b6b26647f8d81b64f82f37 SHA1 155439813383e4626c99b97e0ec9279cdb056c8a SHA256 bf277d66e6b36d9e950f638b31bd34c05119c77723ce1be4acce50ca4509695e
+EBUILD crip-3.9.ebuild 828 RMD160 300cad134296ea807ea451a24bd70f133130a96d SHA1 4b310d92470b430bfb9a4f03e1b3ce415c67f0f5 SHA256 a6c6fd9136473c15610fff8ffa65ac668d96ab9195f130239f3234a63837acbe
+MISC ChangeLog 378 RMD160 910c39745ba7febb269c600675efff6a4fe2e5ae SHA1 7855657fd124a9ba97a559e160eb9345ed4591cb SHA256 4196d8890f965de71ff541418f7025d715d19d7fa7ff721ec42690c4f9ad88c5
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
