@@ -1,3 +1,0 @@
-MD5 6c89f416dfdd0915a8d15b7b96c9bd2f checkgmail-1.12.tar.bz2 57347
-RMD160 245f5ebfc7fa466db4b86bea13c285587485eac7 checkgmail-1.12.tar.bz2 57347
-SHA256 bdbd8a1d99f444582ed9f6e3352ece6e3a28909edb236b6a53d70b14c2702494 checkgmail-1.12.tar.bz2 57347
