@@ -1,3 +1,0 @@
-MD5 11aa7f2a1ae2bc3e2671d56f557fbbbf nurbs++-3.0.11.tar.bz2 391439
-RMD160 bc0da90da3a19154efe3356191ccc8bbbff5332f nurbs++-3.0.11.tar.bz2 391439
-SHA256 61691c401353e5c3bf70f63bc18ce07cefdc802d5abff637f02ea2c86f74fbfe nurbs++-3.0.11.tar.bz2 391439
