@@ -1,3 +1,0 @@
-MD5 8791d985aaff9f2c1159acb757d5d7b8 sympy-0.5.3.tar.gz 812584
-RMD160 959fe01514286c5e262de1735995fd260427367f sympy-0.5.3.tar.gz 812584
-SHA256 7309675beacc875f0fa9354330dcb75e3c70bae444d270ce041b25374ca7f330 sympy-0.5.3.tar.gz 812584
