@@ -1,3 +1,0 @@
-MD5 c3bb4daa7c30f3c34bfc1f3a47c35a12 kstart-3.10.tar.gz 123477
-RMD160 92cf78288fade9a6d7d407989d41be641619ce3d kstart-3.10.tar.gz 123477
-SHA256 120320685f67776f823830c93a154a5960209f2e09f55e0519debcd18e89ffea kstart-3.10.tar.gz 123477
