@@ -1,3 +1,0 @@
-MD5 cc6e58bde6cd4b5ea46f3684dd076c81 hippo-canvas-0.2.23.tar.bz2 332846
-RMD160 179728e4c639769330db6804f6ff56b510d3e3b6 hippo-canvas-0.2.23.tar.bz2 332846
-SHA256 fd4ddd8d02fc925da332c193f1d31965d53798aac87d568daa97cc48c6cfe2fe hippo-canvas-0.2.23.tar.bz2 332846
